--- a/VideoGameLauncher/App.xaml
+++ b/VideoGameLauncher/App.xaml
@@ -17,7 +17,8 @@
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
                 <!-- Other Resources -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatSlider.xaml" />                
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatSlider.xaml" />
+                <ResourceDictionary Source="/Themes/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
