--- a/VideoGameLauncher/App.xaml
+++ b/VideoGameLauncher/App.xaml
@@ -15,7 +15,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
                 <!-- Icon Resource dictionaries -->
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
-                <!-- Other Resources -->
+                <!-- Style Resources -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatSlider.xaml" />
                 <ResourceDictionary Source="/Themes/Styles.xaml" />
